fix map z-index

--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -9,6 +9,9 @@
 .map {
   width: 100vw;
   height: 100vh;
+  position: absolute;
+  top: 0;
+  z-index: -1;
 }
 
 .map__tile {
