--- a/src/containers/MapGrid.css
+++ b/src/containers/MapGrid.css
@@ -9,6 +9,8 @@
   width: 100vw;
   height: 100vh;
   position: absolute;
+  top: 0;
+  z-index: -2;
 }
 
 .tile {
